<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="pax">Pax</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="preferred_table_area">Preferred Table Area:</string>
    <string name="non_smoking_area">Non-Smoking Area</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
</resources>
