<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:background="@drawable/c246_hotel_l04"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="40dp"
        android:background="#8FF69B7E"
        android:fontFamily="@font/aclonica"
        android:shadowColor="#FF5722"
        android:text="Reservation for table!"
        android:textColor="#FFEB3B"
        android:textColorHighlight="#FF5722"
        android:textColorHint="#FF5722"
        android:textColorLink="#FF5722"
        android:textSize="34sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/namelabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="40dp"
                android:background="#F8F5F5"
                android:text="Name" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#F8F5F5"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="#000000"
                android:textColorHint="#B1ACAC" />

            <TextView
                android:id="@+id/numberlabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="#F8F5F5"
                android:text="Phone Number" />

            <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#F8F5F5"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:textColor="#000000"
                android:textColorHint="#B1ACAC" />

            <TextView
                android:id="@+id/labelpax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="#F8F5F5"
                android:text="Pax" />

            <EditText
                android:id="@+id/pax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#F8F5F5"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/pax"
                android:inputType="number"
                android:textColor="#000000"
                android:textColorHint="#B1ACAC" />

            <TextView
                android:id="@+id/datename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="#000000"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/date"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:background="#F1ABC3"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TextView
                android:id="@+id/timename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="30dp"
                android:background="#050505"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/time"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:background="#EEA8C0"
                android:timePickerMode="spinner" />

            <TextView
                android:id="@+id/areapreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="30dp"
                android:background="#000000"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/preferred_table_area"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/area"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/nonSmoke"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:background="#EFA9C1"
                    android:fontFamily="sans-serif-condensed"
                    android:shadowColor="#E91E63"
                    android:text="@string/non_smoking_area"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/smoke"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:background="#F0AAC2"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/smoking_area"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="90dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/confirm"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#F0AAC2"
                    android:textColorLink="#EEA8C0"
                    android:textSize="18sp"
                    app:iconTint="#B58C8C" />

                <Button
                    android:id="@+id/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/reset"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#EEA8C0"
                    android:textColorLink="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
